--- a/styles/styles.css
+++ b/styles/styles.css
@@ -126,6 +126,9 @@ main {
   position: relative;
   z-index: 2;
   background-color: var(--background-color-primary);
+  min-height: 100vh;
+  display: block;
+  flex-direction: column;
 }
 
 /* .inner-wrapper .sections-wrapper {
@@ -164,8 +167,8 @@ a {
   align-items: center;
   justify-self: start;
   align-self: end;
-  grid-column: 3 / 4;
-  grid-row: 1;
+  /* grid-column: 3 / 4;
+  grid-row: 1; */
   position: sticky;
   top: 1rem;
 }
@@ -328,7 +331,7 @@ section {
   }
 }
 
-.intro-text-mob--container {
+.intro-text--container-mob {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -339,11 +342,11 @@ section {
 }
 
 .intro-text-mob {
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 @media only screen and (min-width: 640px) {
-  .intro-text-mob--container {
+  .intro-text--container-mob {
     display: none;
   }
 }
@@ -354,7 +357,7 @@ section {
   grid-auto-rows: minmax(auto, 1fr);
   gap: 1rem;
   width: 100%;
-  height: fit-content;
+  height: 100%;
   align-items: baseline;
   grid-column: 3 / 5;
   position: sticky;
@@ -410,33 +413,45 @@ section {
   /* text-transform: uppercase; */
 }
 
-.two-column--container {
+.columns--container {
   display: flex;
   flex-direction: column;
   background-color: var(--background-color-primary);
   position: sticky;
   top: 0;
   min-height: fit-content;
-  height: fit-content;
   transition: position 0.3s ease-in-out;
 }
 
 @media only screen and (max-width: 640px) {
-  .two-column--container {
+  .columns--container {
     padding-top: 0;
+    padding-bottom: 2rem;
   }
 }
 
-.two-column--content {
+@media only screen and (min-width: 640px) and (orientation: portrait) {
+  .columns--container {
+    min-height: 100vh;
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .columns--container {
+    min-height: 100vh;
+  }
+}
+
+.columns--content {
   display: grid;
   grid-auto-columns: minmax(auto, 1fr);
-  grid-auto-rows: auto;
+  grid-auto-rows: auto auto 1fr;
   gap: 1rem;
   flex-grow: 1;
   align-content: space-between;
 }
 
-.two-column--content-text--desktop {
+.column--content-text--desktop {
   position: sticky;
   top: 1rem;
   display: flex;
@@ -495,49 +510,49 @@ section {
   fill: var(--color-primary);
 }
 
-.logotype--svg-top,
-.logotype--svg-bottom {
+.logotype--a-top,
+.logotype--a-bottom {
   height: 68px;
   width: auto;
 }
 
-.logotype--svg-center {
+.logotype--a-center {
   height: 68px;
   width: auto;
 }
 
 @media only screen and (max-width: 520px) {
-  .logotype--svg-top,
-  .logotype--svg-bottom {
+  .logotype--a-top,
+  .logotype--a-bottom {
     height: 50px;
     width: auto;
   }
-  .logotype--svg-center {
+  .logotype--a-center {
     height: 50px;
     width: auto;
   }
 }
 
 @media only screen and (min-width: 1100px) {
-  .two-column--content-text--desktop {
+  .column--content-text--desktop {
     grid-column: 1 / 2;
   }
   /* .intro-text-desktop {
     font-size: 1.2rem;
   } */
-  .logotype--svg-top,
-  .logotype--svg-bottom {
+  .logotype--a-top,
+  .logotype--a-bottom {
     height: 120px;
     width: auto;
   }
-  .logotype--svg-center {
+  .logotype--a-center {
     height: 120px;
     width: auto;
   }
 }
 
 @media only screen and (min-width: 1280px) {
-  .two-column--content-text--desktop {
+  .column--content-text--desktop {
     grid-column: 1 / 2;
   }
   /* .intro-text-desktop {
@@ -549,12 +564,12 @@ section {
   .logotype--svg-container {
     grid-column: 3 / 5;
   }
-  .logotype--svg-top,
-  .logotype--svg-bottom {
+  .logotype--a-top,
+  .logotype--a-bottom {
     height: 100px;
     width: auto;
   }
-  .logotype--svg-center {
+  .logotype--a-center {
     height: 100px;
     width: auto;
   }
@@ -564,19 +579,20 @@ section {
 }
 
 @media only screen and (max-width: 640px) {
-  .two-column--content {
+  /* .columns--content {
     gap: 2rem;
-  }
-  .two-column--content-text--desktop {
+  } */
+  .column--content-text--desktop {
     display: none;
   }
   .logotype--svg-container {
     grid-column: 1 / 3;
-    margin-bottom: 2rem;
     background-color: var(--background-color-primary-transp-2);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
-    margin-top: 0rem;
+    margin-top: -1rem;
+    margin-bottom: calc(2rem - 1px);
+    padding-top: 1rem;
   }
 }
 
@@ -618,6 +634,8 @@ section {
   background-color: var(--background-color-primary);
   z-index: 0;
   width: 100%;
+  height: unset;
+  flex-grow: 1;
 }
 
 .footer--content {
@@ -628,7 +646,9 @@ section {
   row-gap: 1rem;
   justify-content: flex-start;
   z-index: 0;
+  width: 100%;
   width: -webkit-fill-available;
+  height: fit-content;
   align-items: end;
   font-weight: var(--font-weight-base);
 }
@@ -697,13 +717,17 @@ section {
   flex-direction: column;
   gap: 1rem;
   grid-row: 1;
-  grid-column: 2 / 4;
+  grid-column: 2 / 3;
 }
 
 .container-maintenance--ul {
   display: flex;
   flex-direction: column;
   width: fit-content;
+}
+
+.container-maintenance--ul:hover .footer--info-link {
+  opacity: var(--link-hover); /* Adjust the opacity value as needed */
 }
 
 .container-maintenance {
@@ -746,21 +770,6 @@ section {
   background-color: var(--background-color-primary);
 }
 
-.maintenance--announcement--mob {
-  display: flex;
-  padding: 1rem;
-  width: 100%;
-  min-height: var(--section-height-sm);
-  align-items: center;
-  background-color: var(--background-color-primary);
-}
-
-@media only screen and (min-width: 640px) {
-  .maintenance--announcement--mob {
-    display: none;
-  }
-}
-
 @media only screen and (max-width: 640px) {
   .maintenance--announcement--desk {
     display: none;
@@ -771,6 +780,7 @@ section {
   font-size: var(--base-text);
   line-height: var(--caps-line-height);
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 .nav--title {
@@ -784,16 +794,6 @@ section {
     display: none;
   }
 }  
-
-.nav--link-group-container--mob .nav--link {
-  font-size: var(--base-text);
-  line-height: var(--caps-line-height);
-  text-transform: uppercase;
-  padding: 0.5REM 1rem;
-  border: 1px solid white;
-  border-radius: 1rem;
-}
-
 
 .nav--link--mob {
   font-size: var(--base-text);
@@ -828,7 +828,7 @@ section {
   }
 }
 
-.timer-container {
+.timer-container-desk {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
@@ -836,9 +836,10 @@ section {
   height: fit-content;
   align-items: baseline;
   grid-column: 2 / 3;
+  cursor: default;
 }
 
-.nav--link-group--desk {
+.nav--links-left--desk {
   display: flex;
   flex-direction: row;
   gap: 1rem;
@@ -849,26 +850,13 @@ section {
   grid-row: 1;
 }
 
-.nav--link-group-container--mob {
-  top: 1rem;
-  display: none;
-  padding: 0.5rem 1rem;
-  width: 100%;
-  min-height: fit-content;
-  align-items: center;
-  background-color: var(--background-color-primary);
-  overflow-x: scroll;
-  white-space: nowrap;
-}
-
-.nav--link-group--mob {
-  display: flex;
-  flex-direction: row;
-  gap: 1rem;
-  width: 100%;
-  height: fit-content;
-  align-items: end;
-  grid-column: 3;
+@media only screen and (max-width: 720px) {
+  .nav--links-left--desk {
+    display: none;
+  }
+  .timer-container-desk {
+    grid-column: 3 / 4;
+  }
 }
 
 .nav--link-group--desk li{
@@ -887,16 +875,7 @@ section {
     grid-column: 1 / 3;
     grid-row: 1;
   }
-  .timer-container {
-    display: none;
-  }
-  .nav--link-group--desk {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 640px) {
-  .nav--link-group-container--mob {
+  .nav--link-group--desk, .timer-container-desk {
     display: none;
   }
 }
@@ -973,7 +952,7 @@ section {
 }
 
 .maintenance--game-container {
-  position: fixed;
+  /* position: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -983,22 +962,31 @@ section {
   top: calc(var(--header-footer-height-desktop-sm) / 2);
   bottom: 4rem;
   z-index: 10;
-  height: calc(100vh - var(--header-footer-height-desktop-sm));
+  height: calc(100vh - var(--header-footer-height-desktop-sm)); */
+  position: absolute;
+  display: flex;
+  top: 0;
+  z-index: 10;
+  height: calc(100% - 2rem);
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-@media only screen and (max-width: 640px) {
+/* @media only screen and (max-width: 640px) {
   .maintenance--game-container {
     height: calc(100vh - var(--header-footer-height-mob));
     top: calc(var(--header-footer-height-mob) / 2);
   }
-}
+} */
 
 .maintenance--game-btn {
   position: absolute;
   display: flex;
   padding: 1rem 1.5rem;
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.5rem;
   border-radius: 100px;
   border: var(--section-border-width) solid var(--game-btn-outline);
   width: fit-content;
@@ -1230,6 +1218,13 @@ section {
   align-items: baseline;
 }
 
+
+@media only screen and (min-width: 640px) {
+  .container-countdown--mob {
+    display: none;
+  }
+}
+
 .container-countdown--desk {
   display: flex;
   flex-direction: row;
@@ -1453,6 +1448,11 @@ section {
   fill: var(--color-primary);
 }
 
+.logotype--svg {
+  width: inherit;
+  height: 100%;
+}
+
 .maintenance--svg-close {
   width: 18px;
   height: 18px;
@@ -1663,10 +1663,8 @@ input:autofill {
   cursor: pointer;
 }
 
-.container-mode-switch--btn-text:hover .maintenance--contact-h3 {
-  opacity: 0.75;
-  transition: opacity 0.3s;
-  color: var(--color-primary);
+.container-mode-switch--btn-text:hover {
+  opacity: var(--link-hover);
 }
 
 @media only screen and (max-width: 640px) {
@@ -1709,7 +1707,7 @@ input:autofill {
   gap: 1rem;
   position: sticky!important;
   top: 1rem;
-  height: 100%;
+  height: fit-content;
   width: 100%;
   grid-column: 1 / 5;
   position: relative;
@@ -1754,7 +1752,8 @@ input:autofill {
 }
 
 .meta-text--video {
-  /* font-size: var(--base-text-sm); */
+  display: flex;
+  gap: 0.5rem;
   font-size: var(--base-text);
   line-height: var(--caps-line-height);
   width: fit-content;
@@ -1771,6 +1770,12 @@ input:autofill {
   .video-hero-thumbnail {
     aspect-ratio: 4 / 5;
   }
+}
+
+.video-meta--container {
+  display: flex;
+  justify-content: space-between;
+  height: fit-content;
 }
 
 .maintenance-container--form input::placeholder,
@@ -1849,6 +1854,7 @@ input:autofill {
   height: fit-content;
   padding: 0 1rem;
   text-transform: none;
+  flex-wrap: wrap;
 }
 
 .credits-title {
@@ -1912,6 +1918,14 @@ input:autofill {
   cursor: default;
 }
 
+#creditsMessageOpen .credits-detials--container {
+  border-bottom: var(--component-border-width) solid var(--color-primary);
+}
+
+#copyrightContent .credits-detials--container {
+  border-bottom: none;
+}
+
 .credits-content > :not(:first-child) {
   cursor: default;
 }
@@ -1926,4 +1940,15 @@ input:autofill {
     width: fit-content;
     margin: auto 1rem;
   }
+}
+
+#logotypeSvgWidthTop,
+#logotypeSvgWidthCenter,
+#logotypeSvgWidthBottom {
+  display: flex;
+  justify-content: flex-end;
+  opacity: unset;
+  min-height: fit-content;
+  min-width: 100%;
+  justify-content: flex-end;
 }
