--- a/styles/styles.css
+++ b/styles/styles.css
@@ -972,6 +972,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 /* @media only screen and (max-width: 640px) {
