--- a/styles/light-theme.css
+++ b/styles/light-theme.css
@@ -98,7 +98,7 @@ body {
 }
 
 @media only screen and (max-width: 640px) {
-  .two-column--container {
+  .columns--container {
     padding-bottom: 1rem;
   }
 }
