--- a/styles/styles.css
+++ b/styles/styles.css
@@ -692,9 +692,9 @@ section {
   /* .media {
     height: 100%!important;
   } */
-  .content--container--grid {
+  /* .content--container--grid {
     padding-top: 1rem!important;
-  }
+  } */
   #aboutTrigger {
     display: none;
   }
@@ -756,13 +756,16 @@ section {
     height: 100px;
     width: auto;
   }
+  .intro-text-desktop {
+    font-size: 1.5rem;
+  }
 }
 
-@media only screen and (min-width: 1681px) {
+/* @media only screen and (min-width: 1681px) {
   .logotype--svg-container {
     grid-column: 3 / 5;
   }
-}
+} */
 
 @media only screen and (max-width: 840px) and (orientation: portrait) {
   .graphic--container {
