--- a/styles/dark-theme.css
+++ b/styles/dark-theme.css
@@ -1,21 +1,29 @@
 :root {
   --color-highlight-2: #646464;
   
-  --color-primary: #f3f3f3;
+  --color-primary: #ececec;
   --color-secondary: #0E1419;  
   --background-color-primary: #0E1419;
   --background-color-primary-transp: #f3f3f3a6;
   --background-color-primary-transp-glass: #f3f3f300;
   --background-color-primary-transp-glass-2: #f3f3f300;
-  --background-color-secondary: #f3f3f3;
+  --background-color-secondary: #ececec;
   --background-color-secondary-transp: #f3f3f3a6;
   --game-btn-outline: #0E1419;
   --link-hover: 0.5;
-  --link-visited: #f3f3f3;
-  --link-active: #f3f3f3;
+  --link-visited: #ececec;
+  --link-active: #ececec;
 }
 
 .contact-form {
   backdrop-filter: blur(15px);
   -webkit-backdrop-filter: blur(15px);
+}
+
+body {
+  background-color: var(--background-color-primary);
+  /* opacity: 0; */
+  /* background-color: #ececec00; */
+  /* opacity: 0; */
+  /* transition: opacity 0.350s ease-in-out; */
 }
