--- a/styles/light-theme.css
+++ b/styles/light-theme.css
@@ -1,7 +1,9 @@
 :root {
-  --color-highlight-2: #0E1419;
+  --color-highlight-2: #646464;
   --color-highlight-3: #32cd32;
   --color-highlight-4: #646464;
+  --color-highlight-5: #001eff;
+
 
   --section-border-width: 0;
   --section-border-width-minus: -1px;
@@ -13,8 +15,12 @@
   --font-weight-bold: 700;
 
   --color-primary: #0E1419;
-  --color-secondary: #f3f3f3;  
-  --background-color-primary: #f3f3f3;
+  --color-secondary: #ececec;  
+  --color-primary-rgba: rgba(var(--color-primary-rgb), 0); /* Initial RGBA value with 0 opacity */
+
+  --background-color-primary--muted: #E0E0E1;
+
+  --background-color-primary: #ececec;
   --background-color-primary-transp: #0E1419a6;
   --background-color-primary-transp-glass: #0e141900;
   --background-color-primary-transp-glass-2: #f3f3f3CF;
@@ -23,12 +29,56 @@
   --background-color-secondary-transp: #f3f3f3a6;
   --game-btn-outline: #0E1419;
   --link-hover: 0.5;
-  --link-visited: #f3f3f3;
-  --link-active: #f3f3f3;
+  --link-visited: #ececec;
+  --link-active: #ececec;
 }
 
 body {
-  background-color: var(--color-primary);
+  background-color: var(--background-color-primary);
+  /* opacity: 0; */
+  /* transition: opacity 0.350s ease-in-out; */
+}
+
+#sessionOverlay {
+  position: fixed;
+  display: flex;
+  Justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--background-color-primary-transp);
+  backdrop-filter: blur(25px);
+  -webkit-backdrop-filter: blur(25px);
+  z-index: 9999;
+  opacity: 1;
+  transition: opacity 0.750s ease-in-out, z-index 0s;
+}
+
+#sessionOverlay .nav--logotype {
+  color: var(--color-secondary);
+}
+
+#sessionOverlay span{
+  color: var(--color-secondary);
+}
+
+/* #sectionGrapahic path {
+  fill: unset;
+} */
+
+@media only screen and (max-width: 640px) {
+  #sectionGrapahic path {
+    fill: inherit;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  .logotype--svg-container {
+    height: calc(100% + 1rem);
+  }
 }
 
 .contact-form {
@@ -133,10 +183,7 @@ body {
   fill: var(--color-primary);
 }
 .nav--logo-line {  
-  width: 1.75rem;
-  height: var(--component-border-width);
   background-color: var(--color-primary);
-  margin: 0; 
 }
 
 .nav--logo-line {  
@@ -150,26 +197,30 @@ body {
 
 .contact-form--intro--cv-link {
   /* color: var(--color-secondary)!important; */
-  background-color: var(--color-primary);
+  background-color: var(--color-secondary);
 }
 
 .contact-form--intro--cv-link:hover {
-  color: var(--color-primary)!important;
-  background-color: var(--color-secondary);
+  color: var(--color-secondary)!important;
+  background-color: var(--color-highlight-5);
   opacity: 1;
 }
 
+.contact-form--intro--cv-link:hover .contact-form--link--svg{
+  stroke: var(--color-primary)!important;
+}
+
 .mobile-menu-overlay--container .contact-form--intro--cv-link:hover {
-  color: var(--color-primary)!important;
+  color: var(--color-secondary)!important;
   background-color: var(--color-highlight-3);
 }
 
 .contact-form--intro-container--svg svg {
-  stroke: var(--color-secondary)!important;
+  stroke: var(--color-primary)!important;
 }
 
 .contact-form--intro--cv-link:hover svg {
-  stroke: var(--color-primary)!important;
+  stroke: var(--color-secondary)!important;
 }
 
 .contact-form--marquee-container {
@@ -216,3 +267,24 @@ body {
     border-top: var(--component-border-width) solid var(--color-primary);
   }
 } */
+
+.contact-form--marquee-container #contactFormMarqueeTitle {
+  color: var(--color-secondary);
+}
+
+#contact-form--submit {
+  color: var(--color-secondary);
+  background-color: var(--background-color-secondary);
+}
+
+#contact-form--submit:hover{
+  background-color: var(--color-highlight-5)!important;
+}
+
+.cv-bulleted-list li, .intro-text-desktop-about {
+  font-weight: 400;
+}
+
+.cv-text-background.strenghts {
+  font-weight: 400;
+}
