--- a/styles/light-theme.css
+++ b/styles/light-theme.css
@@ -78,7 +78,7 @@ body {
 } */
 
 @media only screen and (max-width: 640px) {
-  #sectionGrapahic path {
+  #sectionGraphic path {
     fill: inherit;
   }
 }
@@ -119,7 +119,7 @@ body {
 }
 
 .footer--container {
-  border: var(--section-border-width) solid var(--color-primary);
+  /* border: var(--section-border-width) solid var(--color-primary); */
   background-color: var(--color-secondary);
   color: var(--color-primary);
   font-weight: 400;
@@ -280,7 +280,7 @@ body {
       padding: 0 1rem 1rem;
   }
   .footer--container {
-    border-top: var(--component-border-width) solid var(--color-primary);
+    /* border-top: var(--component-border-width) solid var(--color-primary); */
   }
 }
 
